--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body id="top">
   <header>
     <nav>
-      <a href="batman-index.html#top"><img src="img/logo/navbar-logo.svg" alt="logo" class="logo"></a>
+      <a href="#top"><img src="img/logo/navbar-logo.svg" alt="logo" class="logo"></a>
       <ul>
         <li><a href="#movies"> Movies </a></li>
         <li><a href="#actors"> Actors </a></li>
