--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright">&copy; verona&trade; </p>
+            <p class="copyright">&copy; verona </p>
           </div>
         </div>
       </div>
