--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#movies"> Movies </a></li>
         <li><a href="#actors"> Actors </a></li>
         <li><a href="#gallery"> Gallery </a></li>
-        <li><a href="#footer"> Contact </a></li>
+        <li><a href="#footer"> Batcave </a></li>
       </ul>
     </nav>
 
@@ -206,7 +206,7 @@
 
       <div class="footer-address">
         <div class="address-logo"></div>
-        <a href="img/map/map.jpg" class="address-map" target="_blank">
+        <a href="img/map.jpg" class="address-map" target="_blank">
           <div class="address-map"></div>
         </a>
         <div class="text-wrapper">
