--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="#actors"> Actors </a></li>
         <li><a href="#gallery"> Gallery </a></li>
         <li><a href="#footer"> Batcave </a></li>
-        <li><a href="#footer"> test </a></li>
+        <li><a href="#footer"> test 2 </a></li>
       </ul>
     </nav>
 
