--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
+
   <link rel="stylesheet" href="batman.css" type="text/css">
   <link rel="stylesheet" href="batman-media-queries.css" type="text/css">
-  
+
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Oswald&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
   <title> Batman - Homepage </title>
@@ -153,28 +153,29 @@
       <div class="wrappers">
         <div class="actors-to-gallery"></div>
       </div>
-      <div class="boxes">
+      
+      <div class="gallery-boxes">
         <h2> Gallery </h2>
         <div class="container">
           <div class="box">
-            <img src="img/gallery/batman-action.jpg" alt="batman in action">
+            <img src="img/gallery/batman-action.jpg" alt="batman in action" class="box-image">
             <span> The </span>
           </div>
 
           <div class="box">
             <!--<a href="img/gallery/2.jpg">-->
-            <img src="img/gallery/batman-flying.jpg" alt="flying batman">
+            <img src="img/gallery/batman-flying.jpg" alt="flying batman" class="box-image">
             <!--</a>-->
             <span> Hero </span>
           </div>
 
           <div class="box">
-            <img src="img/gallery/batman-hero.jpg" alt="batman hero pose">
+            <img src="img/gallery/batman-hero.jpg" alt="batman hero pose" class="box-image">
             <span> We </span>
           </div>
 
           <div class="box">
-            <img src="img/gallery/batman-bats.jpg" alt="batman with bats">
+            <img src="img/gallery/batman-bats.jpg" alt="batman with bats" class="box-image">
             <span> Deserve </span>
           </div>
         </div>
@@ -200,7 +201,6 @@
                 </div>-->
 
     <div class="footer-wrapper">
-
       <div class="footer-img"></div>
 
       <div class="footer-address">
