--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="batman.css" type="text/css">
-  <link rel="stylesheet" href="batman-media-queries.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="style-media-queries.css" type="text/css">
 
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Oswald&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
@@ -18,10 +18,11 @@
 <body id="top">
   <header>
     <nav>
-      <a href="#top" class="nav-link">
-        <img src="img/logo/navbar-logo.svg" alt="logo" class="logo">
-      </a>
+      
       <ul>
+        <li><a href="#top" class="logo-link">
+        <img src="img/logo/navbar-logo.svg" alt="logo" class="logo">
+      </a></li>
         <li><a href="#movies"> Movies </a></li>
         <li><a href="#actors"> Actors </a></li>
         <li><a href="#gallery"> Gallery </a></li>
