navbar - all responsive

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <body id="top">
   <header>
     <nav>
-      
       <ul>
-        <li><a href="#top" class="logo-link">
+        <li class="logo-list"><a href="#top" class="logo-link">
         <img src="img/logo/navbar-logo.svg" alt="logo" class="logo">
       </a></li>
         <li><a href="#movies"> Movies </a></li>
