--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="#actors"> Actors </a></li>
         <li><a href="#gallery"> Gallery </a></li>
         <li><a href="#footer"> Batcave </a></li>
+        <li><a href="#footer"> </a></li>
       </ul>
     </nav>
   </header>
