--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="style.css" type="text/css">
-  <link rel="stylesheet" href="style-media-queries.css" type="text/css">
+  <link rel="stylesheet" href="tablet-and-mobile.css" type="text/css">
+  <link rel="stylesheet" href="mobile.css" type="text/css">
+  <link rel="stylesheet" href="desktop.css" type="text/css">
 
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Oswald&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
