wrappers mobile (glitch SOLVED- removed vh)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section id="hero">
     
     <video id="bat-video" autoplay muted loop>
-      <source src="img/long-cut-reduced.mp4" type="video/mp4">
+      <source src="img/long-cut-70-1366w.mp4" type="video/mp4">
     </video>
     
     <div class="hero-text">
