mobile-gallery & mobile-footer

--- a/index.html
+++ b/index.html
@@ -288,6 +288,12 @@
         </div>
       </div>
     </div>
+    
+    <div class="footer-mobile-wrapper">
+      <div class="footer-mobile-1"></div>
+      <div class="footer-mobile-2"></div>
+      <div class="footer-mobile-3"></div>
+    </div>
   </footer>
 
 </body>
