mobile and tablet gallery responsive, copyright link

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <span> We </span></a>
           </div>
 
-          <div class="mobile-box">
+          <div class="mobile-box box4">
             <a href="img/gallery/batman-bats.jpg"><img src="img/gallery/batman-bats.jpg" alt="batman with bats" class="box-image">
               <span> Deserve </span></a>
           </div>
@@ -284,7 +284,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright">&copy; verona </p>
+            <a href="https://github.com/batman-project" class="copyright" target="_blank"><p>&copy; verona </p></a>
           </div>
         </div>
       </div>
