--- a/index.html
+++ b/index.html
@@ -197,23 +197,22 @@
         <div class="mobile-container">
 
           <div class="mobile-box">
-            <a href="img/gallery/batman-action.jpg"><img src="img/gallery/batman-action.jpg" alt="batman in action" class="box-image">
+            <a href="img/gallery/batman-action.jpg" target="_blank"><img src="img/gallery/batman-action.jpg" alt="batman in action" class="box-image">
               <span> The </span></a>
-
           </div>
 
           <div class="mobile-box">
-            <a href="img/gallery/batman-flying.jpg"><img src="img/gallery/batman-flying.jpg" alt="flying batman" class="box-image">
+            <a href="img/gallery/batman-flying.jpg" target="_blank"><img src="img/gallery/batman-flying.jpg" alt="flying batman" class="box-image">
               <span> Hero </span></a>
           </div>
 
           <div class="mobile-box">
-            <a href="img/gallery/batman-hero.jpg"><img src="img/gallery/batman-hero.jpg" alt="batman hero pose" class="box-image">
+            <a href="img/gallery/batman-hero.jpg" target="_blank"><img src="img/gallery/batman-hero.jpg" alt="batman hero pose" class="box-image">
               <span> We </span></a>
           </div>
 
-          <div class="mobile-box box4">
-            <a href="img/gallery/batman-bats.jpg"><img src="img/gallery/batman-bats.jpg" alt="batman with bats" class="box-image">
+          <div class="mobile-box">
+            <a href="img/gallery/batman-bats.jpg" target="_blank"><img src="img/gallery/batman-bats.jpg" alt="batman with bats" class="box-image">
               <span> Deserve </span></a>
           </div>
         </div>
@@ -284,16 +283,36 @@
                 </a>
               </li>
             </ul>
-            <a href="https://github.com/batman-project" class="copyright" target="_blank"><p>&copy; verona </p></a>
+            <a href="https://github.com/batman-project" class="copyright" target="_blank">
+              <p>&copy; verona </p>
+            </a>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="footer-mobile-wrapper">
-      <div class="footer-mobile-1"></div>
-      <div class="footer-mobile-2"></div>
-      <div class="footer-mobile-3"></div>
+    <div class="footer-mobile-wrapper"><!--social-wrapper-->
+      <h4 class="mobile-follow-b"> follow <span class="italics">Batman</span> </h4>
+      
+      <ul class="mobile-social-ul">   <!--social-ul-->
+        <li class="mobile-social-list">  <!--social-list-->
+          <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/logo-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
+          </a>
+        </li>
+
+        <li class="mobile-social-list">  <!--social-list-->
+          <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank"><img src="img/logo/logo-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
+          </a>
+        </li>
+
+        <li class="mobile-social-list">  <!--social-list-->
+          <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/logo-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
+          </a>
+        </li>
+      </ul>
+      <a href="https://github.com/batman-project" class="mobile-copyright" target="_blank">
+        <p>&copy; verona </p>
+      </a>
     </div>
   </footer>
 
