--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <li><a href="#movies"> Movies </a></li>
         <li><a href="#actors"> Actors </a></li>
         <li><a href="#gallery"> Gallery </a></li>
-        <li><a href="#footer"> Batcave </a></li>
+        <li class="batcave"><a href="#footer"> Batcave </a></li>
+        <li class="follow"><a href="#footer"> Follow </a></li>
       </ul>
     </nav>
   </header>
@@ -291,28 +292,34 @@
       </div>
     </div>
 
-    <div class="footer-mobile-wrapper"><!--social-wrapper-->
-      <h4 class="mobile-follow-b"> follow <span class="italics">Batman</span> </h4>
-      
-      <ul class="mobile-social-ul">   <!--social-ul-->
-        <li class="mobile-social-list">  <!--social-list-->
+    <div class="footer-mobile-wrapper">
+      <div class="mobile-followb-wrapper">
+        <h4> follow <span class="italics">Batman</span> </h4>
+      </div>
+
+      <ul class="mobile-social-ul">
+        <li class="mobile-social-list">
           <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/logo-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
           </a>
         </li>
 
-        <li class="mobile-social-list">  <!--social-list-->
+        <li class="mobile-social-list">
           <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank"><img src="img/logo/logo-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
           </a>
         </li>
 
-        <li class="mobile-social-list">  <!--social-list-->
+        <li class="mobile-social-list">
           <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/logo-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
           </a>
         </li>
       </ul>
-      <a href="https://github.com/batman-project" class="mobile-copyright" target="_blank">
-        <p>&copy; verona </p>
-      </a>
+      
+      <div class="mobile-copyright">
+        <a href="https://github.com/batman-project" class="mobile-a-copyright" target="_blank">
+          <p>&copy; verona </p>
+        </a>
+      </div>
+
     </div>
   </footer>
 
