mobile-footer (completed)

--- a/index.html
+++ b/index.html
@@ -294,22 +294,22 @@
 
     <div class="footer-mobile-wrapper">
       <div class="mobile-followb-wrapper">
-        <h4> follow <span class="italics">Batman</span> </h4>
+        <h4> follow Batman </h4>
       </div>
 
       <ul class="mobile-social-ul">
         <li class="mobile-social-list">
-          <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/logo-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
+          <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/mobile-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
           </a>
         </li>
 
         <li class="mobile-social-list">
-          <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank"><img src="img/logo/logo-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
+          <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank"><img src="img/logo/mobile-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
           </a>
         </li>
 
         <li class="mobile-social-list">
-          <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/logo-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
+          <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/mobile-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
           </a>
         </li>
       </ul>
