--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="#actors"> Actors </a></li>
         <li><a href="#gallery"> Gallery </a></li>
         <li class="batcave"><a href="#footer"> Batcave </a></li>
-        <li class="follow"><a href="#footer"> Follow </a></li>
+      
       </ul>
     </nav>
   </header>
@@ -267,7 +267,7 @@
         <div class="info-logo"></div>
         <div class="info-text">
           <div class="social-wrapper">
-            <h4 class="follow-b"> follow <span class="italics">Batman</span> </h4>
+            <h4 class="follow-b"> follow Batman </h4>
             <ul class="social-ul">
               <li class="social-list">
                 <a href="https://www.facebook.com/batman/" class="a-text" target="_blank"><img src="img/logo/logo-facebook.svg" alt="facebook logo" class="social-logo facebook">
