--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="boxes movies">
         <h2> Movies </h2>
         <div class="feature">
-          <a href="img/movies/dark-knight.jpg" target="_blank"><img class="picture" src="img/movies/dark-knight.jpg" alt="dark knight picture"></a>
+          <abbr title="The Dark Knight - Movie poster"><a href="img/movies/dark-knight.jpg" target="_blank"><img class="picture" src="img/movies/dark-knight.jpg" alt="dark knight picture"></a></abbr>
           <h3> The Dark Knight </h3>
           <p><span class="italics">&ldquo;The Dark Knight&rdquo;</span> is a 2008 film directed, produced, and co-written by Christopher Nolan. </p>
           <p> Based on the DC Comics character Batman, the film is the second installment of Nolan's The Dark Knight Trilogy and a sequel to 2005's Batman Begins,
@@ -70,12 +70,12 @@
 
           <p>In the film, Bruce Wayne, Police Lieutenant James Gordon and District Attorney Harvey Dent form an alliance to dismantle organized crime in Gotham City, but are menaced by an anarchistic mastermind known as the Joker, who seeks to
             undermine Batman's influence and turn the city to chaos.</p>
-          <a href="https://www.imdb.com/title/tt0468569/" class="read-more" target="_blank">Read more on Imdb...</a>
+          <abbr title="Click to open link in new tab"><a href="https://www.imdb.com/title/tt0468569/" class="read-more button" target="_blank" rel="noopener noreferrer">Read more on IMDb</a></abbr>
         </div>
 
 
         <div class="feature">
-          <a href="img/movies/batman-robin.jpg" target="_blank"><img class="picture" src="img/movies/batman-robin.jpg" alt="batman and robin picture"></a>
+          <abbr title="Batman & Robin - Movie poster"><a href="img/movies/batman-robin.jpg" target="_blank"><img class="picture" src="img/movies/batman-robin.jpg" alt="batman and robin picture"></a></abbr>
           <h3> Batman &amp; Robin </h3>
           <p> <span class="italics">&ldquo;Batman & Robin&rdquo;</span> is a 1997 American superhero film based on the DC Comics characters Batman and Robin. It is the fourth and final installment of Warner Bros.' initial Batman film series, a sequel to Batman
             Forever and the only film in the
@@ -84,18 +84,22 @@
             Pat Hingle, and Elle Macpherson. </p>
           <p> The film follows the titular characters as they attempt to prevent Mr. Freeze and Poison Ivy from taking over the world, while at the same time struggling to keep their partnership together. It is also to date the only live-action film
             appearance of Batgirl, portrayed by Silverstone, who helps the titular characters fight the villains. </p>
-          <a href="https://www.imdb.com/title/tt0118688/" class="read-more" target="_blank">Read more on Imdb...</a>
+          <abbr title="Click to open link in new tab">
+            <a href="https://www.imdb.com/title/tt0118688/" class="read-more button" target="_blank" rel="noopener noreferrer">Read more on IMDb</a>
+          </abbr>
         </div>
 
         <div class="feature">
-          <a href="img/movies/batman-returns.jpeg" target="_blank"><img class="picture" src="img/movies/batman-returns.jpeg" alt="batman returns picture"></a>
+          <abbr title="Batman Returns - Movie poster"><a href="img/movies/batman-returns.jpeg" target="_blank"><img class="picture" src="img/movies/batman-returns.jpeg" alt="batman returns picture"></a></abbr>
           <h3> Batman Returns </h3>
           <p><span class="italics">&ldquo;Batman Returns&rdquo;</span> is a 1992 American superhero film directed by Tim Burton and produced by Denise Di Novi and Burton, based on the DC Comics character Batman. </p>
           <p>The sequel to the 1989 film Batman, it is the second installment of Warner Bros. initial Batman film series, and stars Michael Keaton as Batman, alongside Danny DeVito, Michelle Pfeiffer, Christopher Walken, Michael Gough, Pat Hingle and
             Michael Murphy. </p>
           <p>In Batman Returns, Batman must prevent the Penguin from killing all of Gotham City's firstborn sons, while dealing with Catwoman, who seeks vengeance against Max Shreck, a corrupt tycoon who seeks to bring Gotham City under his control.
           </p>
-          <a href="https://www.imdb.com/title/tt0103776/" class="read-more" target="_blank">Read more on Imdb...</a>
+          <abbr title="Click to open link in new tab">
+            <a href="https://www.imdb.com/title/tt0103776/" class="read-more button" target="_blank" rel="noopener noreferrer">Read more on IMDb</a></abbr>
+          
         </div>
       </div>
     </section>
@@ -123,7 +127,7 @@
           <p>Bale is the recipient of many awards, including an Academy Award and two Golden Globes, and was featured in the Time 100 list of 2011.
             Bale's personal life and personality have been the subject of much public attention, despite his desire to keep a low profile. </p>
           <p>He is a supporter of Sea Shepherd Conservation Society, Greenpeace, and the World Wildlife Fund, and obtained American citizenship in 2014. Bale has been married to Sandra Bla&zcaron;i&cacute; since 2000; they have two children.</p>
-          <a href="https://en.wikipedia.org/wiki/Christian_Bale" class="source" target="_blank">&#91;source: Wikipedia&#93;</a>
+          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Christian_Bale" class="source button" target="_blank" rel="noopener noreferrer">&#91;source: Wikipedia&#93;</a></abbr>
         </div>
 
 
@@ -136,7 +140,7 @@
             a Golden Globe Award for Best Actor – Motion Picture Musical or Comedy and receiving a nomination for the Academy Award for Best Actor. </p>
           <p>He previously received a Golden Globe Award nomination for his performance in Live from Baghdad (2002) and a Screen Actors Guild Award nomination for The Company (2007). Keaton was awarded a Career Achievement Award from the Hollywood
             Film Festival.</p>
-          <a href="https://en.wikipedia.org/wiki/Michael_Keaton" class="source" target="_blank">&#91;source: Wikipedia&#93;</a>
+          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Michael_Keaton" class="source button" target="_blank" rel="noopener noreferrer">&#91;source: Wikipedia&#93;</a></abbr>
         </div>
 
         <div class="feature">
@@ -147,7 +151,7 @@
             Real Genius (1985), as well as the military action film Top Gun (1986), and the fantasy film Willow (1988).</p>
           <p>Some of his other notable film roles include Jim Morrison in The Doors (1991), an apparition of Elvis Presley in True Romance (1993), Doc Holliday in Tombstone (1993), Chris Shiherlis in Heat (1995), Bruce Wayne / Batman in Batman
             Forever (1995), Simon Templar in The Saint (1997), Moses in The Prince of Egypt (1998), "Gay Perry" in Kiss Kiss Bang Bang (2005), and Dieter Von Cunth in MacGruber (2010).</p>
-          <a href="https://en.wikipedia.org/wiki/Val_Kilmer" class="source" target="_blank">&#91;source: Wikipedia&#93;</a>
+          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Val_Kilmer" class="source button" target="_blank" rel="noopener noreferrer">&#91;source: Wikipedia&#93;</a></abbr>
         </div>
       </div>
     </section>
@@ -299,23 +303,23 @@
 
       <ul class="mobile-social-ul">
         <li class="mobile-social-list">
-          <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/mobile-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
+          <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
           </a>
         </li>
 
         <li class="mobile-social-list">
-          <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank"><img src="img/logo/mobile-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
+          <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
           </a>
         </li>
 
         <li class="mobile-social-list">
-          <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank"><img src="img/logo/mobile-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
+          <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
           </a>
         </li>
       </ul>
       
       <div class="mobile-copyright">
-        <a href="https://github.com/batman-project" class="mobile-a-copyright" target="_blank">
+        <a href="https://github.com/batman-project" class="mobile-a-copyright" target="_blank" rel="noopener noreferrer">
           <p>&copy; &cap;  verona  &cap;</p>
         </a>
       </div>
