hero-text (h1 not fit when resizing window)

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
   <header>
     <nav>
       <ul>
-        <li class="logo-list"><a href="#top" class="logo-link">
+        <li class="logo-list">
+          <a href="#top" class="logo-link">
             <img src="img/logo/navbar-logo.svg" alt="logo" class="logo">
-          </a></li>
+          </a>
+        </li>
         <li><a href="#movies"> Movies </a></li>
         <li><a href="#actors"> Actors </a></li>
         <li><a href="#gallery"> Gallery </a></li>
@@ -127,7 +129,7 @@
           <p>Bale is the recipient of many awards, including an Academy Award and two Golden Globes, and was featured in the Time 100 list of 2011.
             Bale's personal life and personality have been the subject of much public attention, despite his desire to keep a low profile. </p>
           <p>He is a supporter of Sea Shepherd Conservation Society, Greenpeace, and the World Wildlife Fund, and obtained American citizenship in 2014. Bale has been married to Sandra Bla&zcaron;i&cacute; since 2000; they have two children.</p>
-          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Christian_Bale" class="source button" target="_blank" rel="noopener noreferrer">&#91;source: Wikipedia&#93;</a></abbr>
+          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Christian_Bale" class="source button" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></abbr>
         </div>
 
 
@@ -140,7 +142,7 @@
             a Golden Globe Award for Best Actor – Motion Picture Musical or Comedy and receiving a nomination for the Academy Award for Best Actor. </p>
           <p>He previously received a Golden Globe Award nomination for his performance in Live from Baghdad (2002) and a Screen Actors Guild Award nomination for The Company (2007). Keaton was awarded a Career Achievement Award from the Hollywood
             Film Festival.</p>
-          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Michael_Keaton" class="source button" target="_blank" rel="noopener noreferrer">&#91;source: Wikipedia&#93;</a></abbr>
+          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Michael_Keaton" class="source button" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></abbr>
         </div>
 
         <div class="feature">
@@ -151,7 +153,7 @@
             Real Genius (1985), as well as the military action film Top Gun (1986), and the fantasy film Willow (1988).</p>
           <p>Some of his other notable film roles include Jim Morrison in The Doors (1991), an apparition of Elvis Presley in True Romance (1993), Doc Holliday in Tombstone (1993), Chris Shiherlis in Heat (1995), Bruce Wayne / Batman in Batman
             Forever (1995), Simon Templar in The Saint (1997), Moses in The Prince of Egypt (1998), "Gay Perry" in Kiss Kiss Bang Bang (2005), and Dieter Von Cunth in MacGruber (2010).</p>
-          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Val_Kilmer" class="source button" target="_blank" rel="noopener noreferrer">&#91;source: Wikipedia&#93;</a></abbr>
+          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Val_Kilmer" class="source button" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></abbr>
         </div>
       </div>
     </section>
