--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <source src="img/long-cut-80-1366w.mp4//" type="video/mp4">
     </video>
 
-    <div class="hero-text">
+    <div id="hero-text">
       <h1> Batman </h1>
       <h2> The Hero We Need </h2>
     </div>
