--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="hero">
 
     <video id="bat-video" autoplay muted loop>
-      <source src="img/long-cut-80-1366w.mp4//" type="video/mp4">
+      <source src="img/long-cut-80-1366w.mp4" type="video/mp4">
     </video>
 
     <div id="hero-text">
