--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="hero">
 
     <video id="bat-video" autoplay muted loop>
-      <source src="img/long-cut-80-1366w.mp4" type="video/mp4">
+      <source src="img/long-cut-80-1366w.mp4//" type="video/mp4">
     </video>
 
     <div id="hero-text">
@@ -63,7 +63,7 @@
       </div>
       <div class="boxes movies">
         <h2> Movies </h2>
-        <div class="feature">
+        <div class="feature feature-1">
           <abbr title="The Dark Knight - Movie poster"><a href="img/movies/dark-knight.jpg" target="_blank"><img class="picture" src="img/movies/dark-knight.jpg" alt="dark knight picture"></a></abbr>
           <h3> The Dark Knight </h3>
           <p><span class="italics">&ldquo;The Dark Knight&rdquo;</span> is a 2008 film directed, produced, and co-written by Christopher Nolan. </p>
@@ -76,7 +76,7 @@
         </div>
 
 
-        <div class="feature">
+        <div class="feature feature-2">
           <abbr title="Batman & Robin - Movie poster"><a href="img/movies/batman-robin.jpg" target="_blank"><img class="picture" src="img/movies/batman-robin.jpg" alt="batman and robin picture"></a></abbr>
           <h3> Batman &amp; Robin </h3>
           <p> <span class="italics">&ldquo;Batman & Robin&rdquo;</span> is a 1997 American superhero film based on the DC Comics characters Batman and Robin. It is the fourth and final installment of Warner Bros.' initial Batman film series, a sequel to Batman
@@ -91,13 +91,13 @@
           </abbr>
         </div>
 
-        <div class="feature">
+        <div class="feature feature-3">
           <abbr title="Batman Returns - Movie poster"><a href="img/movies/batman-returns.jpeg" target="_blank"><img class="picture" src="img/movies/batman-returns.jpeg" alt="batman returns picture"></a></abbr>
           <h3> Batman Returns </h3>
           <p><span class="italics">&ldquo;Batman Returns&rdquo;</span> is a 1992 American superhero film directed by Tim Burton and produced by Denise Di Novi and Burton, based on the DC Comics character Batman. </p>
           <p>The sequel to the 1989 film Batman, it is the second installment of Warner Bros. initial Batman film series, and stars Michael Keaton as Batman, alongside Danny DeVito, Michelle Pfeiffer, Christopher Walken, Michael Gough, Pat Hingle and
             Michael Murphy. </p>
-          <p>In Batman Returns, Batman must prevent the Penguin from killing all of Gotham City's firstborn sons, while dealing with Catwoman, who seeks vengeance against Max Shreck, a corrupt tycoon who seeks to bring Gotham City under his control.
+          <p>In the film, Batman must prevent the Penguin from killing all of Gotham City's firstborn sons, while dealing with Catwoman, who seeks vengeance against Max Shreck, a corrupt tycoon who seeks to bring Gotham City under his control.
           </p>
           <abbr title="Click to open link in new tab">
             <a href="https://www.imdb.com/title/tt0103776/" class="read-more button" target="_blank" rel="noopener noreferrer">Read more on IMDb</a></abbr>
@@ -122,7 +122,7 @@
       </div>
       <div class="boxes actors">
         <h2>Actors</h2>
-        <div class="feature">
+        <div class="feature feature-1">
           <a href="img/actors/christian-bale.jpg" target="_blank"><img class="picture" src="img/actors/christian-bale.jpg" alt="Christian Bale picture"></a>
           <h3> Christian Bale </h3>
           <p>Christian Charles Philip Bale (born 30 January 1974) is an English actor who is known for his intense method acting style, often transforming his body drastically for his roles. </p>
@@ -133,7 +133,7 @@
         </div>
 
 
-        <div class="feature">
+        <div class="feature feature-2">
           <a href="img/actors/michael-keaton.jpg" target="_blank"><img class="picture" src="img/actors/michael-keaton.jpg" alt="Michael Keaton picture"></a>
           <h3> Michael Keaton </h3>
           <p>Michael John Douglas (born September 5, 1951), known professionally as Michael Keaton, is an American actor. He first rose to fame for his roles on the CBS sitcoms All's Fair and The Mary Tyler Moore Hour and his comedic film roles in
@@ -145,7 +145,7 @@
           <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Michael_Keaton" class="source button" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></abbr>
         </div>
 
-        <div class="feature">
+        <div class="feature feature-3">
           <a href="img/actors/val-kilmer.jpg" target="_blank"><img class="picture" src="img/actors/val-kilmer.jpg" alt="Val Kilmer picture"></a>
           <h3> Val Kilmer </h3>
           <p>Val Edward Kilmer (born December 31, 1959) is an American actor, musician and artist. </p>
