--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Fanpage about Batman movies and actors">
-  
+
   <!--     Open Graph      -->
   <meta property="og:title" content="Batman Fanpage" />
   <meta property="og:description" content="Fanpage about Batman movies and actors" />
@@ -21,7 +21,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Oswald&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
-  <title> Batman - Homepage </title>
+  <title> Batman Fanpage </title>
   <link rel="icon" type="text/png" href="img/favicon.png">
 </head>
 
@@ -109,7 +109,6 @@
           </p>
           <abbr title="Click to open link in new tab">
             <a href="https://www.imdb.com/title/tt0103776/" class="read-more button" target="_blank" rel="noopener noreferrer">Read more on IMDb</a></abbr>
-
         </div>
       </div>
     </section>
