--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 
           <p>In the film, Bruce Wayne, Police Lieutenant James Gordon and District Attorney Harvey Dent form an alliance to dismantle organized crime in Gotham City, but are menaced by an anarchistic mastermind known as the Joker, who seeks to
             undermine Batman's influence and turn the city to chaos.</p>
-          <abbr title="Click to open link in new tab"><a href="https://www.imdb.com/title/tt0468569/" class="read-more button" target="_blank" rel="noopener noreferrer">Read more on IMDb</a></abbr>
+          <abbr title="Click to open link in new tab">
+            <div class="button-wrapper"><a href="https://www.imdb.com/title/tt0468569/" class="read-more read-more-1" target="_blank" rel="noopener noreferrer">Read more on IMDb</a></div>
+          </abbr>
         </div>
 
 
@@ -95,7 +97,7 @@
           <p> The film follows the titular characters as they attempt to prevent Mr. Freeze and Poison Ivy from taking over the world, while at the same time struggling to keep their partnership together. It is also to date the only live-action film
             appearance of Batgirl, portrayed by Silverstone, who helps the titular characters fight the villains. </p>
           <abbr title="Click to open link in new tab">
-            <a href="https://www.imdb.com/title/tt0118688/" class="read-more button" target="_blank" rel="noopener noreferrer">Read more on IMDb</a>
+            <div class="button-wrapper"><a href="https://www.imdb.com/title/tt0118688/" class="read-more read-more-2" target="_blank" rel="noopener noreferrer">Read more on IMDb</a></div>
           </abbr>
         </div>
 
@@ -108,7 +110,8 @@
           <p>In the film, Batman must prevent the Penguin from killing all of Gotham City's firstborn sons, while dealing with Catwoman, who seeks vengeance against Max Shreck, a corrupt tycoon who seeks to bring Gotham City under his control.
           </p>
           <abbr title="Click to open link in new tab">
-            <a href="https://www.imdb.com/title/tt0103776/" class="read-more button" target="_blank" rel="noopener noreferrer">Read more on IMDb</a></abbr>
+            <div class="button-wrapper"><a href="https://www.imdb.com/title/tt0103776/" class="read-more read-more-3" target="_blank" rel="noopener noreferrer">Read more on IMDb</a></div>
+          </abbr>
         </div>
       </div>
     </section>
@@ -136,7 +139,9 @@
           <p>Bale is the recipient of many awards, including an Academy Award and two Golden Globes, and was featured in the Time 100 list of 2011.
             Bale's personal life and personality have been the subject of much public attention, despite his desire to keep a low profile. </p>
           <p>He is a supporter of Sea Shepherd Conservation Society, Greenpeace, and the World Wildlife Fund, and obtained American citizenship in 2014. Bale has been married to Sandra Bla&zcaron;i&cacute; since 2000; they have two children.</p>
-          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Christian_Bale" class="source button" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></abbr>
+          <abbr title="Click to open link in new tab">
+            <div class="button-wrapper"><a href="https://en.wikipedia.org/wiki/Christian_Bale" class="source source-1" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></div>
+          </abbr>
         </div>
 
 
@@ -149,7 +154,9 @@
             a Golden Globe Award for Best Actor – Motion Picture Musical or Comedy and receiving a nomination for the Academy Award for Best Actor. </p>
           <p>He previously received a Golden Globe Award nomination for his performance in Live from Baghdad (2002) and a Screen Actors Guild Award nomination for The Company (2007). Keaton was awarded a Career Achievement Award from the Hollywood
             Film Festival.</p>
-          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Michael_Keaton" class="source button" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></abbr>
+          <abbr title="Click to open link in new tab">
+            <div class="button-wrapper"><a href="https://en.wikipedia.org/wiki/Michael_Keaton" class="source source-2" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></div>
+          </abbr>
         </div>
 
         <div class="feature feature-3">
@@ -160,7 +167,9 @@
             Real Genius (1985), as well as the military action film Top Gun (1986), and the fantasy film Willow (1988).</p>
           <p>Some of his other notable film roles include Jim Morrison in The Doors (1991), an apparition of Elvis Presley in True Romance (1993), Doc Holliday in Tombstone (1993), Chris Shiherlis in Heat (1995), Bruce Wayne / Batman in Batman
             Forever (1995), Simon Templar in The Saint (1997), Moses in The Prince of Egypt (1998), "Gay Perry" in Kiss Kiss Bang Bang (2005), and Dieter Von Cunth in MacGruber (2010).</p>
-          <abbr title="Click to open link in new tab"><a href="https://en.wikipedia.org/wiki/Val_Kilmer" class="source button" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></abbr>
+          <abbr title="Click to open link in new tab">
+            <div class="button-wrapper"><a href="https://en.wikipedia.org/wiki/Val_Kilmer" class="source source-3" target="_blank" rel="noopener noreferrer">source: Wikipedia</a></div>
+          </abbr>
         </div>
       </div>
     </section>
@@ -294,7 +303,7 @@
               </li>
             </ul>
             <a href="https://github.com/batman-project" class="copyright" target="_blank">
-              <p>&copy; &cap; verona &cap;</p>
+              <p>&cap; verona &cap;</p>
             </a>
           </div>
         </div>
@@ -325,7 +334,7 @@
 
       <div class="mobile-copyright">
         <a href="https://github.com/batman-project" class="mobile-a-copyright" target="_blank" rel="noopener noreferrer">
-          <p>&copy; &cap; verona &cap;</p>
+          <p>&cap; verona &cap;</p>
         </a>
       </div>
 
