--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="#movies"> Movies </a></li>
         <li><a href="#actors"> Actors </a></li>
         <li><a href="#gallery"> Gallery </a></li>
+        <li><a href="#gallery"> test </a></li>
         <li class="batcave"><a href="#footer"> Batcave </a></li>
 
       </ul>
